--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,62 @@
 body {
-  background-color: #98d2ea;
+  background-color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+}
+
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Poppins', sans-serif;
+}
+
+
+
+.carousel-item {
+  height: 65vh;
+  min-height: 300px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+
+/* Nav Link Color */
+nav li a {
+  font-size: 13px;
+}
+
+
+/* Social Icons */
+ul {
+  overflow: auto;
+}
+
+ul li {
+  list-style-type: none;
+  float: left;
+}
+
+ul li a i {
+  width: 30px;
+  height: 30px;
+  border-radius: 20px;
+  font-size: 25px;
+  text-align: center;
+  margin-right: 10px;
+  padding-top: 15%;
+}
+
+
+
+/* .jumbotron {
+  height: 550px;
+  background-color: rgb(206, 206, 206);
 }
 
 section {
@@ -36,4 +93,4 @@ header {
 
 .facialRejuvenationPicture {
   height: 200px;
-}
+} */
