--- a/public/css/index.css
+++ b/public/css/index.css
@@ -35,8 +35,9 @@ h6 {
   bottom: 0;
   left: 0;
   right: 0;
-  background: #9BD2E9;
-  opacity: .4;
+  background: rgb(29, 29, 226);
+  background: linear-gradient(327deg, rgba(29, 29, 226, 1) 0%, rgba(116, 208, 227, 1) 100%);
+  opacity: .7;
 }
 
 .carousel-caption {
@@ -53,7 +54,7 @@ h6 {
   font-size: 3.5rem;
   font-weight: 500;
   letter-spacing: .2rem;
-  text-shadow: .1rem .1rem .8rem black;
+  text-shadow: .1rem .1rem .1rem rgb(8, 23, 161);
   padding-bottom: .2rem;
 }
 
@@ -88,46 +89,3 @@ ul li a i {
   margin-right: 10px;
   padding-top: 15%;
 }
-
-
-
-/* .jumbotron {
-  height: 550px;
-  background-color: rgb(206, 206, 206);
-}
-
-section {
-  margin-top: 80px;
-  padding: 0 20px;
-}
-
-.bold {
-  font-weight: bold;
-}
-
-.italic {
-  font-style: italic;
-}
-
-header {
-  margin-top: 60px;
-  height: 80px;
-  background-color: #d4d4d4;
-  color: #000;
-}
-
-.headshot-picture {
-  height: 150px;
-}
-
-.services-techniques-used {
-  list-style: none;
-}
-
-#slimCo {
-  background-color: #f0eeef;
-}
-
-.facialRejuvenationPicture {
-  height: 200px;
-} */
