--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6,6 +6,32 @@ body {
   color: #505962;
 }
 
+/* Nav Link Color */
+nav li a {
+  font-size: 13px;
+}
+
+
+/* Social Icons */
+ul {
+  overflow: auto;
+}
+
+ul li {
+  list-style-type: none;
+  float: left;
+}
+
+ul li a i {
+  width: 30px;
+  height: 30px;
+  border-radius: 20px;
+  font-size: 25px;
+  text-align: center;
+  margin-right: 10px;
+  padding-top: 15%;
+}
+
 h1,
 h2,
 h3,
@@ -51,41 +77,18 @@ h6 {
 
 .carousel-caption h1 {
   font-family: 'Poppins', sans-serif;
-  font-size: 3.5rem;
-  font-weight: 500;
+  font-size: 3.8rem;
+  font-weight: 700;
   letter-spacing: .2rem;
   text-shadow: .1rem .1rem .1rem rgb(8, 23, 161);
-  padding-bottom: .2rem;
 }
 
 .carousel-caption h3 {
   font-size: 1.3rem;
-  padding-bottom: .4rem;
 }
 
 
-/* Nav Link Color */
-nav li a {
-  font-size: 13px;
-}
-
-
-/* Social Icons */
-ul {
-  overflow: auto;
-}
-
-ul li {
-  list-style-type: none;
-  float: left;
-}
-
-ul li a i {
-  width: 30px;
-  height: 30px;
-  border-radius: 20px;
-  font-size: 25px;
-  text-align: center;
-  margin-right: 10px;
-  padding-top: 15%;
+.callout {
+  background-color: rgb(243, 243, 243);
+  height: 10vh;
 }
