--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,5 @@
-body {
+body,
+html {
   overflow-x: hidden;
   background-color: #ffffff;
   font-family: 'Roboto', sans-serif;
@@ -103,6 +104,12 @@ footer a {
   font-weight: 300;
 }
 
+.h-divider {
+  width: 100%;
+  height: 1px;
+  border-top: 1px solid gray;
+}
+
 footer .button {
   color: #505962;
 }
@@ -111,4 +118,10 @@ footer .button {
   font-size: 11px;
 }
 
-/* Scroll To Top Button */
+/* Title Bar */
+
+#title-bar {
+  padding-top: 80px;
+  background-color: aqua;
+  height: 15vh;
+}
