--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,17 +1,29 @@
 body {
-  overflow-x: hidden;
+
   background-color: #ffffff;
-  font-family: 'Roboto', sans-serif;
-  font-size: 15px;
-  color: #8b8b8b;
+  font-family: 'Raleway', sans-serif;
+  font-size: 17px;
+  color: #424242;
   line-height: 1.7em;
 }
 
 /* Nav Link Color */
 nav li a {
   font-size: 13px;
+  font-weight: 700;
+  font-family: 'Raleway', sans-serif;
 }
 
+/* navbar */
+
+.navbar {
+  height: 100px;
+}
+
+.navbar-light .navbar-brand {
+  font-weight: 700;
+  color: #3E7CF9;
+}
 
 /* Social Icons */
 ul {
@@ -39,16 +51,19 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Barlow', sans-serif;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  color: #13315C;
 }
 
 h1 {
   font-weight: 700;
 }
 
-h2 {
-  font-weight: 500;
-  color: #13315C;
+.bold {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 1.5;
 }
 
 /* Slider */
@@ -74,6 +89,7 @@ h2 {
   background: rgb(29, 29, 226);
   background: linear-gradient(327deg, rgba(29, 29, 226, 1) 0%, rgba(116, 208, 227, 1) 100%);
   opacity: .7;
+  width: 100%;
 }
 
 .carousel-caption {
@@ -86,7 +102,7 @@ h2 {
 }
 
 .carousel-caption h1 {
-  font-family: 'Barlow', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 3.8rem;
   font-weight: 700;
   letter-spacing: .2rem;
@@ -103,14 +119,29 @@ h2 {
 
 #title-bar {
   /* background-color: #13315C; */
-  background: #347397;
-  background: -webkit-linear-gradient(top left, #347397, #2621C8);
-  background: -moz-linear-gradient(top left, #347397, #2621C8);
-  background: linear-gradient(top left, #347397, #2621C8);
+  background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+}
+
+#titlebar-heading {
+  padding-top: 80px;
+}
+
+.contact-us {
+  color: #13315C;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
 }
 
 .callout {
   background-color: #13315C;
+}
+
+#card-testimonial {
+  background-color: #3E7CF9;
+}
+
+.testimonial {
+  font-size: 17px;
 }
 
 .sidebar-callout {
@@ -140,4 +171,70 @@ footer .button {
 
 #copyright {
   font-size: 11px;
+}
+
+#bodylight-image {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (max-width: 768px) {
+  .bodylight-image {
+    display: flex;
+    margin: auto;
+    overflow: hidden;
+    width: 100%;
+  }
+}
+
+/* Medium devices (tablets, 768px and up) 
+The navbar toggle appears at this breakpoint */
+@media (min-width: 1200px) {
+  .dropdown:hover .dropdown-menu {
+    display: block;
+    margin-top: 0;
+    border-radius: 0;
+  }
+}
+
+.fa-check {
+  color: #4DE981;
+}
+
+/* Price Card */
+
+section.pricing {
+  background: #007bff;
+  background: linear-gradient(to right, #0062E6, #33AEFF);
+}
+
+.pricing .card {
+  border: none;
+  border-radius: 1rem;
+  transition: all 0.2s;
+  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+}
+
+.pricing hr {
+  margin: 1.5rem 0;
+}
+
+.pricing .card-title {
+  margin: 0.5rem 0;
+  font-size: 1.5rem;
+  letter-spacing: .1rem;
+  font-weight: bold;
+}
+
+.pricing .card-price {
+  font-size: 3rem;
+  margin: 0;
+}
+
+.pricing .card-price .period {
+  font-size: 0.8rem;
+}
+
+.pricing ul li {
+  margin-bottom: 1rem;
 }
