--- a/public/css/index.css
+++ b/public/css/index.css
@@ -56,6 +56,7 @@ h6 {
   color: #13315C;
 }
 
+
 h1 {
   font-weight: 700;
 }
@@ -154,6 +155,10 @@ footer {
   font-size: 12px;
 }
 
+footer h6 {
+  color: #ffffff;
+}
+
 footer a {
   color: rgb(221, 233, 255);
   font-weight: 300;
@@ -237,4 +242,8 @@ section.pricing {
 
 .pricing ul li {
   margin-bottom: 1rem;
+}
+
+.word-wrap {
+  word-wrap: break-word;
 }
