--- a/public/css/index.css
+++ b/public/css/index.css
@@ -193,15 +193,24 @@ footer .button {
   }
 }
 
-/* Medium devices (tablets, 768px and up) 
+/* /* Medium devices (tablets, 768px and up) 
 The navbar toggle appears at this breakpoint */
-@media (min-width: 1200px) {
+/* @media (min-width: 1400px) {
   .dropdown:hover .dropdown-menu {
     display: block;
     margin-top: 0;
     border-radius: 0;
   }
+} */
+/* @media (min-width: 768px) {
+  .navbar-toggler-right {
+    display: none;
+  
+} */
+*/ .navbar-header button {
+  display: block;
 }
+
 
 .fa-check {
   color: #4DE981;
