Updated HTML and CSS

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -126,6 +126,7 @@ h1 {
 
 #titlebar-heading {
   padding-top: 80px;
+  margin-top: 20px;
 }
 
 .contact-us {
@@ -218,6 +219,12 @@ The navbar toggle appears at this breakpoint */
 
 .fa-asterisk {
   color: red;
+}
+
+.march-callout {
+  background-color: green;
+  color: #ffffff;
+  padding: 3px;
 }
 
 /* Price Card */
