Updated HTML and CSS

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -226,7 +226,7 @@ The navbar toggle appears at this breakpoint */
 .march-callout {
   background-color: green;
   color: #ffffff;
-  padding: 3px;
+  padding: 1.5em;
 }
 
 /* Price Card */
