--- a/public/css/index.css
+++ b/public/css/index.css
@@ -122,8 +122,12 @@ h1 {
 }
 
 #title-bar {
-  /* background-color: #13315C; */
-  background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+  /* background-color: rgb(13, 160, 228); */
+  /* background-image: linear-gradient(-180deg, #fdfbfb 0%, #ebedee 100%); */
+
+  background-image: url("/public/pictures/whirlpool.png");
+  background-repeat: repeat-x;
+
 }
 
 #titlebar-heading {
