--- a/public/css/index.css
+++ b/public/css/index.css
@@ -124,15 +124,14 @@ h1 {
 #title-bar {
   /* background-color: rgb(13, 160, 228); */
   /* background-image: linear-gradient(-180deg, #fdfbfb 0%, #ebedee 100%); */
-
   background-image: url("/public/pictures/whirlpool.png");
   background-repeat: repeat-x;
-
 }
 
 #titlebar-heading {
   padding-top: 80px;
   margin-top: 20px;
+  text-decoration: underline;
 }
 
 .contact-us {
