--- a/public/css/index.css
+++ b/public/css/index.css
@@ -73,6 +73,7 @@ h1 {
 
 .carousel-item {
   height: 65vh;
+  width: 100%;
   min-height: 300px;
   background: no-repeat center center scroll;
   -webkit-background-size: cover;
